Sidebar scrollbar fix + latest item overflow fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1507,6 +1507,7 @@ table.table {
 }
 
 #sidebar-wrapper {
+    overflow-x: hidden;
     z-index: 1000;
     position: absolute;
     left: 250px;
@@ -1905,6 +1906,11 @@ tr:nth-child(2n) {
     #mychart {
         width: auto;
         height: calc(100% - 24px);
+    }
+}
+@media screen and (min-width: 990px) and (max-width: 1100px) {
+    p {
+        margin: 0 0 5px;
     }
 }
 
